# tutorial-django-auth

./: .gitignore  README.md  pyproject.toml
apps/accounts/: views.py
project/: settings.py  urls.py
templates/: base.html  home.html
templates/registration/: login.html  signup.html
